Finishing the header section adding the queries for make it responsive in other resolutions like tablet or PC

--- a/styles.css
+++ b/styles.css
@@ -78,5 +78,27 @@ div, ul, nav, header, footer, a, li, label, body {
 
 /* ------- HEADER QUERIES ------- */
 
+@container header (min-width: 600px) {
+    .header__nav {
+        display: block;
+        position: static;
+        height: auto;
+        width: auto;
+        justify-content: space-between;
+        z-index: 1;
+    }
+
+    .header__nav-list {
+        flex-direction: row;
+        height: auto;
+        width: auto;
+        gap: 20px;
+        margin-right: 40px;
+    }
+    
+    .header__open-nav-button {
+        display: none;
+    }
+}
 
 /* ------- HEADER ENDS ------- */
