Clogins the header section on CSS file and creating the first part of the MAIN SECTION on the index.html

--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,6 @@ div, ul, nav, header, footer, a, li, label, body {
 }
 
 /* ------- HEADER ENDS ------- */
+
+/* ------- PROFILE SECTION ------- */
+
