--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,134 @@ div, ul, nav, header, footer, a, li, label, body {
 
 /* ------- PROFILE SECTION ------- */
 
+.profile {
+    container-type: inline-size;
+    container-name: profile;
+}
+
+.profile__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fff;
+    max-width: 1400px;
+}
+
+.profile__data-container {
+    max-width: 600px;
+    padding: 12px;
+}
+
+.profile__img-container {
+    max-height: 500px;
+    overflow: hidden;
+}
+
+.profile__img {
+    max-width: 100%;
+    width: 720px;
+}
+
+h1 {
+    color: #26a;
+}
+
+.profile__skills-container {
+    color: #26a;
+}
+
+.profile__skill {
+    list-style: none;
+    display: flex;
+    margin: 10px;
+    max-width: 600px;
+    margin-left: 0;
+    align-items: center;
+}
+
+.load-bar {
+    border: 2px solid #48e;
+    border-radius: 8px;
+    color: #fff;
+    padding: 2px;
+    font-size: 12px;
+    width: 80%;
+    margin: 4px;
+    margin-left: 0;
+}
+
+.load-bar__bar {
+    background-color: #48e;
+    border-radius: 6px;
+    padding-right: 4px 6px;
+    padding-left: 7px;
+}
+
+.bar--80 {
+    width: 80%;
+}
+.bar--70 {
+    width: 70%;
+}
+.bar--60 {
+    width: 60%;
+}
+.bar--90 {
+    width: 90%;
+}
+
+/* ------- PROFILE QUERIES ------- */
+
+@container profile (min-width: 720px) {
+    .profile__wrapper {
+        flex-direction: row;
+        padding: 20px;
+        background-color: transparent;
+        height: 90vh;
+        margin: auto;
+    }
+
+    .profile__data-container {
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        border-radius: 0 25px 25px 0;
+        box-shadow: 0 0 9px #0002;
+    }
+
+    h1 {
+        margin-top: 0;
+        font-size: 4rem;
+        text-wrap: balance;
+    }
+
+    .profile__data {
+        max-width: 620px;
+        }
+
+    .profile__img-container {
+        max-height: initial;
+        border-radius: 25px 0 0 25px;
+    }
+
+    .profile__img {
+        height: 100%;
+        object-fit: cover;
+        width: 620px;
+    }
+}
+
+/* ------- PROFILE ENDS ------- */
+
+/* ------- PORTFOLIO SECTION ------- */
+
+
+
+
+/* ------- PORTFOLIO QUERIES ------- */
+
+
+
+
+
+/* ------- PORTFOLIO ENDS ------- */
