--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ div, ul, nav, header, footer, a, li, label, body {
     align-items: center;
     container-type: inline-size;
     container-name: header;
+    position: relative;
+    z-index: 10;
+    text-align: center;
+    font-size: 20px;
 }
 
 .header__open-nav-button {
@@ -85,7 +89,6 @@ div, ul, nav, header, footer, a, li, label, body {
         height: auto;
         width: auto;
         justify-content: space-between;
-        z-index: 1;
     }
 
     .header__nav-list {
@@ -226,13 +229,72 @@ h1 {
 
 /* ------- PORTFOLIO SECTION ------- */
 
+.portfolio {
+    background-color: #18233f;
+    color: #fff;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    container-type: inline-size;
+    container-name: portfolio;
+    justify-content: space-evenly;
+}
 
+.portfolio__title {
+    font-size: 3rem;
+    margin-bottom: 0;
+}
 
+.portfolio__project-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 1300px;
+    margin: auto;
+    width: 100%;
+    gap: 12px;
+    padding: 12px;
+    min-height: 80vh;
+}
+
+.portfolio__project {
+    background-image: linear-gradient(#0009,#0009), url("images/PERFIL 4.webp");
+    background-position: center;
+    background-size: cover;
+    display: grid;
+    place-content: center;
+}
+
+.portfolio__project:hover {
+    opacity: 0.74;
+    outline: 2px solid #fff;
+}
 
 /* ------- PORTFOLIO QUERIES ------- */
 
+@container portfolio (min-width: 56.25rem) {
+    .portfolio__project-container {
+        grid-template-columns: repeat(auto-fill,minmax(420px,1fr));
+    }
+    .portfolio__project:first-child {
+        grid-column: span 2;
+    }
+    .portfolio__project:nth-child(6) {
+        grid-column: span 2;
+    }
+}
 
-
-
+@container portfolio (min-width: 81.25rem) {
+    .portfolio__project-container {
+        grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    }
+    .portfolio__project:first-child {
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+    .portfolio__project:nth-child(6) {
+        grid-column: span 4;
+    }
+}
 
 /* ------- PORTFOLIO ENDS ------- */
