Creating the space in styles.css to start with the code creation to give style for the contact section. Creating the structure in index.html for the contact section.

--- a/styles.css
+++ b/styles.css
@@ -298,3 +298,14 @@ h1 {
 }
 
 /* ------- PORTFOLIO ENDS ------- */
+
+/* ------- CONTACT SECTION ------- */
+
+
+
+/* ------- CONTACT QUERIES ------- */
+
+
+
+
+/* ------- CONTACT ENDS ------- */
