--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,7 @@ h1 {
     background-size: cover;
     display: grid;
     place-content: center;
+    border-radius: 10px;
 }
 
 .portfolio__project:hover {
@@ -301,11 +302,100 @@ h1 {
 
 /* ------- CONTACT SECTION ------- */
 
+.form {
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+    container-type: inline-size;
+    container-name: form;
+}
 
+.form__form {
+    display: grid;
+    padding: 12px;
+    max-width: 600px;
+    width: 100%;
+}
+
+.form__input-container :is(input,textarea) {
+    width: 100%;
+    padding: 9px;
+    font-size: 16px;
+    margin: 4px;
+    margin-left: 0;
+    border: none;
+    box-shadow: 2px 2px 4px #0003;
+    border-radius: 10px;
+}
+
+.form__input-container textarea {
+    resize: none;
+    min-height: 120px;
+    font-family: inherit;
+}
+
+.form__input-container input[type="submit"] {
+    padding: 12px;
+    background-color: #48e;
+    color: #fff;
+    border-radius: 10px;
+}
+
+.form__input-container input[type="submit"]:hover {
+    background-color: #26a;
+    cursor: pointer;
+}
+
+.form__title {
+    font-size: 2.4rem;
+}
 
 /* ------- CONTACT QUERIES ------- */
 
-
-
+@container form (min-width: 56.25rem) {
+    .form__form {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "name lastname"
+        "email email"
+        "message message"
+        "button button";
+        gap: 12px;
+        background-image: radial-gradient(#18233f06, #18233f22);
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0 0 40px #0006;
+    }
+    .form__input-container:first-child {
+        grid-area: name;
+    }
+    .form__input-container:nth-child(2) {
+        grid-area: lastname;
+    }
+    .form__input-container:nth-child(3) {
+        grid-area: email;
+    }
+    .form__input-container:nth-child(4) {
+        grid-area: message;
+    }
+    .form__input-container:nth-child(5) {
+        grid-area: button;
+    }
+    .form__input-container :is(input,textarea) {
+        box-shadow: none;
+    }
+}
 
 /* ------- CONTACT ENDS ------- */
+
+/* ------- FOOTER SECTION ------- */
+
+
+/* ------- FOOTER QUERIES ------- */
+
+
+
+/* ------- FOOTER ENDS ------- */
