--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ div, ul, nav, header, footer, a, li, label, body {
 .profile {
     container-type: inline-size;
     container-name: profile;
+    animation: aparecer 2.4s -.6s both;
 }
 
 .profile__wrapper {
@@ -424,9 +425,18 @@ footer {
         background-color: #fff;
     }
     to {
-        background-color: #0006;
+        background-color: #10163266;
         padding: 0;
         color: #fff;
         border-radius: 0 0 25px 25px;
+    }
+}
+
+@keyframes aparecer {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
